<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">소도시</string>

    // Onboarding
    <string name="onboarding_start">시작하기</string>
    <string name="onboarding_login">이미 소도시 회원이에요!</string>
    <string name="onboarding_next">다음</string>
    <string name="onboarding_allow_terms">확인</string>
    <string name="onboarding_finish">소도시 입주 완료</string>

    <string name="onboarding_first_title">공부하기 좋은 카페 어디지?</string>
    <string name="onboarding_first_message">우리는 모두 다양한 취향을 가지고 있습니다.\n소도시에서 내 취향을 담은 장소를 만나보세요</string>

    <string name="onboarding_input_phone_number">휴대폰 번호를 입력해주세요</string>
    <string name="onboarding_phone_number_kr_code">+82</string>
    <string name="onboarding_phone_number_hint">01012345678</string>
    <string name="onboarding_phone_number_guide">안전한 소도시 커뮤니티를 위해 휴대폰 번호로 가입해요</string>
    <string name="onboarding_phone_warning">올바른 휴대폰번호 양식이 아니에요!</string>

    <string name="onboarding_input_sms_code">인증번호를 입력하세요</string>
    <string name="onboarding_sms_code_resend"><u>재전송</u></string>
    <string name="onboarding_timer_warning">인증번호 입력시간을 초과하였어요.</string>
    <string name="onboarding_sms_code_warning">인증번호가 일치하지 않아요.</string>

    <string name="onboarding_input_password">비밀번호를 입력해주세요</string>
    <string name="onboarding_forgot_password">비밀번호를 모르겠어요</string>
    <string name="onboarding_password_hint">8자리 이상 입력해주세요</string>
    <string name="onboarding_repassword_hint">한 번 더 입력해주세요!</string>
    <string name="onboarding_password_warning">비밀번호가 일치하지 않아요.</string>

    <string name="onboarding_input_nickname">시민님을 뭐라고 부를까요?</string>
    <string name="onboarding_nickname_hint">호랑이는 가죽을 남기고...</string>

    <string name="onboarding_terms_allow_all_terms">약관 모두 동의</string>

    <string name="onboarding_welcome">%s님의\n입주를 환영합니다 👋</string>

    // Home
    <string name="join_sodosi_list_title">내가 참여 중인 소도시 🔨</string>
    <string name="bookmark_sodosi_list_title">내 관심 소도시 👍</string>
    <string name="hot_sodosi_list_title">지금 HOT한 소도시 🔥</string>
    <string name="new_sodosi_list_title">새롭게 추천하는 소도시 👋</string>
    <string name="more_sodosi">더 보기</string>
    <string name="expand_sodosi">펼쳐보기</string>
    <string name="collapse_sodosi">접기</string>
    <string name="sodosi_user_count">%s명의 소시민들</string>
    <string name="sodosi_moment_count">%s개의 순간</string>

    // Home - Suggest
    <string name="suggest_title">🗺 나만의 지도를 만들어보세요</string>
    <string name="suggest_message">언제든지 내 취향을 가득 담은 지도를 만들 수 있어요\n평소에 좋아했던 곳으로 시작하면 어떨까요?</string>
    <string name="suggest_ok">지금 시작하기</string>
    <string name="suggest_no">일단 구경하기</string>

    // Footer
    <string name="footer_blog">블로그</string>
    <string name="footer_instagram">인스타그램</string>
    <string name="footer_coffee">커피 한 잔으로 응원하기</string>
    <string name="footer_copyright">© 2022 소도시 All Rights Reserved</string>

    // Thread
    <string name="thread_title">스레드</string>
    <string name="thread_comment_hint">코멘트를 남겨보세요.</string>

    // Thread - 신고
    <string name="report_title">신고하는 이유를 선택해주세요</string>
    <string name="report_submit">신고가 접수되었어요. 감사합니다!</string>

    <string name="report_moment_case1">셀카나 개인정보가 포함되어 있어요.</string>
    <string name="report_moment_case2">음란성 글이에요.</string>
    <string name="report_moment_case3">중복/도배성 글이에요.</string>
    <string name="report_moment_case4">광고/홍보성 글이에요.</string>
    <string name="report_moment_case5">분쟁을 야기하는 글이에요.</string>

    <string name="report_sodosi_case1">음란성 주제에요.</string>
    <string name="report_sodosi_case2">중복/도배성 주제에요.</string>
    <string name="report_sodosi_case3">광고/홍보성 주제이에요.</string>
    <string name="report_sodosi_case4">분쟁을 야기하는 주제에요.</string>

    <string name="report_privacy">PRIVACY</string>
    <string name="report_pornographic">PORNOGRAPHIC</string>
    <string name="report_duplication">DUPLICATION</string>
    <string name="report_advertisement">ADVERTISEMENT</string>
    <string name="report_conflict">CONFLICT</string>

    // Location
    <string name="location_title">우리 동네 설정</string>
    <string name="location_search_hint">동명을 검색해 보세요</string>
    <string name="location_search_with_gps">현재 위치로 찾기</string>

    // Map
    <string name="map_place_title">소중한 장소를 공유해주세요</string>
    <string name="map_place_sub_title">시민들이 추천한 장소</string>
    <string name="map_place_hint">이 테마는 바로 여기!</string>

    // Map - Comment
    <string name="comment">댓글</string>

    <string name="report">신고하기</string>
    <string name="close">닫기</string>

    <string name="sodosi_menu_edit">수정하기</string>
    <string name="sodosi_menu_bookmark">관심 소도시에 추가</string>
    <string name="sodosi_menu_bookmark_cancel">관심 소도시 해제</string>
    <string name="sodosi_menu_share">공유하기</string>

    // Map - Create Moment
    <string name="sodosi_create_moment_title">공유할 장소로 핀을 이동하세요</string>
    <string name="sodosi_create_moment_button">이 위치로 주소 설정</string>
    <string name="sodosi_create_moment">장소 기록</string>
    <string name="sodosi_create_moment_finish">완료</string>
    <string name="sodosi_create_moment_hint">\"%s\"에 찰떡인 장소를 기록해주세요.</string>

    // Create Sodosi
    <string name="create_title">새로운 소도시</string>
    <string name="create_sodosi_name_hint">ex. 선릉역 직장인들의 점심 맛집</string>
    <string name="create_sodosi_visibility">소도시 공개 여부</string>
    <string name="create_sodosi_private">비공개</string>
    <string name="create_sodosi_private_message">나만 볼 수 있습니다.</string>
    <string name="create_sodosi_public">공개</string>
    <string name="create_sodosi_public_message">다른 사람과 소도시를 공유할 수 있습니다.</string>
    <string name="create_sodosi">완료</string>

    // Edit Sodosi
    <string name="edit_title">소도시 수정</string>

    <string name="create_exit_title">만드실 도시...기대하고 있어요!</string>
    <string name="create_exit_message">중단 시 만들고 계신 소도시가 저장되지 않아요.\n정말 나가시겠어요?</string>
    <string name="create_exit_exit">나가기</string>
    <string name="create_exit_continue">이어하기</string>

    <string name="create_first_title">첫 소도시 건설을 축하해요!🎉</string>
    <string name="create_first_message">사장님의 취향이 듬뿍 담긴 도시가 완성됐어요!\n꽤 멋진 도시가 될 것 같은데요?</string>
    <string name="create_first_next_step">장소 추가하기</string>
    <string name="create_first_pass_step">나중에 하기</string>

    // Mypage
    <string name="mypage_created_sodosi">내가 만든 소도시</string>
    <string name="mypage_commented_sodosi">참여 중인 소도시</string>
    <string name="mypage_bookmark">북마크</string>
    <string name="mypage_current_moment">최근 내가 남긴 순간</string>
    <string name="mypage_last_visited_time">%s 방문</string>
    <string name="mypage_edit_nickname">닉네임 설정</string>
    <string name="mypage_marked_sodosi">관심 소도시</string>
    <string name="mypage_marked_sodosi_edit">편집</string>
    <string name="mypage_move_to_create">내 소도시 만들기</string>
    <string name="mypage_add_marked_sodosi">관심 소도시 추가하기</string>
    <string name="mypage_edit_sodosi_list_title">소도시 선택(%s)</string>
    <string name="delete">삭제</string>

    // Setting
    <string name="setting_title">설정</string>
    <string name="setting_password">비밀번호 변경</string>
    <string name="setting_password_before">현재 비밀번호</string>
    <string name="setting_password_after">새 비밀번호</string>
    <string name="setting_password_after_check">새 비밀번호 다시 입력</string>
    <string name="setting_notification">앱 알림 설정</string>
    <string name="setting_finish">완료</string>

    <string name="setting_phone_number_title">휴대폰 번호 변경</string>
    <string name="setting_phone_number_now">현재 휴대폰 번호</string>
    <string name="setting_phone_number_new">변경할 휴대폰 번호</string>
    <string name="setting_phone_number_hint">01012345678</string>

    // Sodosi List
    <string name="sodosi_total_list_title">전체 소도시</string>
    <string name="sodosi_total">전체</string>
    <string name="sodosi_sort_popular">인기순</string>
    <string name="sodosi_sort_fastest">최신순</string>

    // User Exit
    <string name="user_exit_title">떠나신다니 아쉬워요</string>
    <string name="user_exit_message">함께 만들었던 모든 기록들이 사라져요. 정말 탈퇴하실 건까요?</string>
    <string name="user_exit_button_ok">탈퇴하기</string>
    <string name="user_exit_button_cancel">아니오</string>
</resources>