<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp"
    android:background="@drawable/background_rounded_white"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvExitTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_semibold"
        android:text="@string/user_exit_title"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvExitMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/user_exit_message"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExitTitle" />

    <TextView
        android:id="@+id/btnDeleteUser"
        style="@style/Typography.HeadLines.Callout.Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/user_exit_button_ok"
        app:layout_constraintEnd_toStartOf="@id/btnContinue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExitMessage" />

    <TextView
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        style="@style/Typography.HeadLines.Callout.Bold"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDeleteUser"
        android:text="@string/user_exit_button_cancel"
        android:textColor="@color/green600"
        app:layout_constraintTop_toBottomOf="@id/tvExitMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>