<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/background_rounded_gray_stroke"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/Typography.HeadLines.Callout.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggest_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMessage"
        style="@style/Typography.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/suggest_message"
        android:textColor="#8A8A8E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateSodosi"
        style="@style/Typography.Caption.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_rounded_green_4dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="6dp"
        android:stateListAnimator="@null"
        android:text="@string/suggest_ok"
        android:textColor="@color/white"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        style="@style/Typography.Caption.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/background_rounded_gray_4dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="6dp"
        android:stateListAnimator="@null"
        android:text="@string/suggest_no"
        android:textColor="#8A8A8E"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCreateSodosi" />

</androidx.constraintlayout.widget.ConstraintLayout>