<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="@dimen/icon_width"
        android:layout_height="@dimen/icon_height"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintBottom_toTopOf="@id/topbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/topbar"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/topbar_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/onboarding_input_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topbar" />

    <View
        android:id="@+id/phoneNumberBackground"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="#EEEEEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPhoneNumber" />

    <TextView
        android:id="@+id/tvNumberCodeKR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/onboarding_phone_number_kr_code"
        app:layout_constraintBottom_toBottomOf="@id/phoneNumberBackground"
        app:layout_constraintStart_toStartOf="@id/phoneNumberBackground"
        app:layout_constraintTop_toTopOf="@id/phoneNumberBackground" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:hint="@string/onboarding_phone_number_hint"
        android:inputType="number"
        android:maxLength="11"
        app:layout_constraintBottom_toBottomOf="@id/phoneNumberBackground"
        app:layout_constraintEnd_toEndOf="@id/phoneNumberBackground"
        app:layout_constraintStart_toEndOf="@id/tvNumberCodeKR"
        app:layout_constraintTop_toTopOf="@id/phoneNumberBackground">

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/onboarding_phone_number_guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberBackground" />

    <com.sodosi.ui.common.customview.SodosiButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/onboarding_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>