<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.sodosi.ui.common.customview.SodosiAppbar
        android:id="@+id/appbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNickname"
        style="@style/OnboardingTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_input_nickname"
        app:layout_constraintEnd_toEndOf="@id/appbar"
        app:layout_constraintStart_toStartOf="@id/appbar"
        app:layout_constraintTop_toBottomOf="@id/appbar" />

    <View
        android:id="@+id/inputBackground"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/onboarding_inputbox_top_margin"
        android:background="@drawable/background_rounded_gray"
        app:layout_constraintEnd_toEndOf="@id/appbar"
        app:layout_constraintStart_toStartOf="@id/appbar"
        app:layout_constraintTop_toBottomOf="@id/tvNickname" />

    <EditText
        android:id="@+id/etNickname"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:hint="@string/onboarding_nickname_hint"
        app:layout_constraintBottom_toBottomOf="@id/inputBackground"
        app:layout_constraintEnd_toEndOf="@id/inputBackground"
        app:layout_constraintStart_toStartOf="@id/inputBackground"
        app:layout_constraintTop_toTopOf="@id/inputBackground">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvWarning"
        style="@style/WarningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/inputBackground"
        app:layout_constraintTop_toBottomOf="@id/inputBackground" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFinish"
        style="@style/SodosiButton"
        android:layout_width="@dimen/screen_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/onboarding_button_bottom_margin"
        android:enabled="false"
        android:text="@string/onboarding_finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>